// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiListGroup is rendered 1`] = `
<ul
  aria-label="aria-label"
  class="ouiListGroup ouiListGroup--gutterSmall ouiListGroup-maxWidthDefault testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiListGroup listItems is rendered 1`] = `
<ul
  class="ouiListGroup ouiListGroup--gutterSmall ouiListGroup-maxWidthDefault"
>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium"
  >
    <span
      class="ouiListGroupItem__text"
    >
      <span
        class="ouiListGroupItem__icon"
        color="inherit"
        data-ouiicon-type="stop"
      />
      <span
        class="ouiListGroupItem__label"
        title="Label with iconType"
      >
        Label with iconType
      </span>
    </span>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-hasExtraAction"
  >
    <span
      class="ouiListGroupItem__text"
    >
      <span
        class="ouiListGroupItem__label"
        title="Custom extra action"
      >
        Custom extra action
      </span>
    </span>
    <button
      aria-label="bell"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction ouiListGroupItem__extraAction-alwaysShow"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="bell"
      />
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isClickable"
  >
    <button
      class="ouiListGroupItem__button"
      type="button"
    >
      <span
        class="ouiListGroupItem__label"
        title="Button with onClick"
      >
        Button with onClick
      </span>
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isActive ouiListGroupItem-isClickable"
  >
    <a
      class="ouiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="ouiListGroupItem__label"
        title="Active link"
      >
        Active link
      </span>
    </a>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem-isClickable"
  >
    <a
      class="ouiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="ouiListGroupItem__label"
        title="Link with href"
      >
        Link with href
      </span>
    </a>
  </li>
</ul>
`;

exports[`OuiListGroup listItems is rendered with color 1`] = `
<ul
  class="ouiListGroup ouiListGroup--gutterSmall ouiListGroup-maxWidthDefault"
>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem--primary"
  >
    <span
      class="ouiListGroupItem__text"
    >
      <span
        class="ouiListGroupItem__icon"
        color="inherit"
        data-ouiicon-type="stop"
      />
      <span
        class="ouiListGroupItem__label"
        title="Label with iconType"
      >
        Label with iconType
      </span>
    </span>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem--primary ouiListGroupItem-hasExtraAction"
  >
    <span
      class="ouiListGroupItem__text"
    >
      <span
        class="ouiListGroupItem__label"
        title="Custom extra action"
      >
        Custom extra action
      </span>
    </span>
    <button
      aria-label="bell"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiListGroupItem__extraAction ouiListGroupItem__extraAction-alwaysShow"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="bell"
      />
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem--primary ouiListGroupItem-isClickable"
  >
    <button
      class="ouiListGroupItem__button"
      type="button"
    >
      <span
        class="ouiListGroupItem__label"
        title="Button with onClick"
      >
        Button with onClick
      </span>
    </button>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem--primary ouiListGroupItem-isActive ouiListGroupItem-isClickable"
  >
    <a
      class="ouiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="ouiListGroupItem__label"
        title="Active link"
      >
        Active link
      </span>
    </a>
  </li>
  <li
    class="ouiListGroupItem ouiListGroupItem--medium ouiListGroupItem--primary ouiListGroupItem-isClickable"
  >
    <a
      class="ouiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="ouiListGroupItem__label"
        title="Link with href"
      >
        Link with href
      </span>
    </a>
  </li>
</ul>
`;

exports[`OuiListGroup listItems is rendered with size 1`] = `
<ul
  class="ouiListGroup ouiListGroup--gutterSmall ouiListGroup-maxWidthDefault"
/>
`;

exports[`OuiListGroup props bordered is rendered 1`] = `
<ul
  class="ouiListGroup ouiListGroup-bordered ouiListGroup--gutterSmall ouiListGroup-maxWidthDefault"
/>
`;

exports[`OuiListGroup props flush is rendered 1`] = `
<ul
  class="ouiListGroup ouiListGroup-flush ouiListGroup--gutterSmall ouiListGroup-maxWidthDefault"
/>
`;

exports[`OuiListGroup props gutter size m is rendered 1`] = `
<ul
  class="ouiListGroup ouiListGroup--gutterMedium ouiListGroup-maxWidthDefault"
/>
`;

exports[`OuiListGroup props gutter size none is rendered 1`] = `
<ul
  class="ouiListGroup ouiListGroup-maxWidthDefault"
/>
`;

exports[`OuiListGroup props gutter size s is rendered 1`] = `
<ul
  class="ouiListGroup ouiListGroup--gutterSmall ouiListGroup-maxWidthDefault"
/>
`;

exports[`OuiListGroup props maxWidth as a number is rendered 1`] = `
<ul
  class="ouiListGroup ouiListGroup--gutterSmall"
  style="max-width:300px"
/>
`;

exports[`OuiListGroup props maxWidth as a string is rendered 1`] = `
<ul
  class="ouiListGroup ouiListGroup--gutterSmall"
  style="max-width:20em"
/>
`;

exports[`OuiListGroup props maxWidth as true is rendered 1`] = `
<ul
  class="ouiListGroup ouiListGroup--gutterSmall ouiListGroup-maxWidthDefault"
/>
`;

exports[`OuiListGroup props showToolTips is rendered 1`] = `
<ul
  class="ouiListGroup ouiListGroup--gutterSmall ouiListGroup-maxWidthDefault"
/>
`;

exports[`OuiListGroup props wrapText is rendered 1`] = `
<ul
  class="ouiListGroup ouiListGroup--gutterSmall ouiListGroup-maxWidthDefault"
/>
`;
